2000-11-26  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* README.BeOS: added
	* README.win32: added (temporarily unavailable) to cross-compiling instructions	

2000-11-26  Max Horn  <max@quendi.de>
	* files/utils.cc: fixed a bug in get_system_path (it sometimes "forgot" to call switch_slashes)

2000-11-26  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* beos/exult.rsrc: BeOS resource file
	* Makefile.be: include resource file in binary

2000-11-26  Max Horn  <max@quendi.de>
	* mouse.cc: mouse is now positioned correctly directly after creation

2000-11-26  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* gamewin.cc: fixed problem with "journey onward" right after "create new game"

2000-11-26  Max Horn  <max@quendi.de>
	* effects.cc, gamedat.cc, gumps.cc, imagewin.h, usecode.cc, useval.cc: fixed incorrect uses of delete/delete[]
	* txtscroll.cc: TextScroller::text change to vector of std::strings
	* effects.cc: Text_effect::msg changed to std::string

2000-11-25  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* configure.in: fixed most (hopefully all) configure options

2000-11-25  Max Horn  <max@quendi.de>
	* Configuration.cc: some cleanup
	* exceptions.h: exult_exception now saves errno when it is thrown
	* exult.cc: moved most code of main() to exult_main()
	* exult.cc: added try/catch block to the new main()
	* gameclk.cc: added GPL header (should be in every source/header file)
	* gamewin.cc: u7open removed in favor of U7open
	* files/utils.cc: U7open throws an file_open_exception if it fails; does not return an int anmore
	* files/utils.cc: U7exists now also checks upper case variant of the name
	* files/utils.cc: fixed a MacOS only bug in switch_slashes
	* *.cc: changed all calls to U7open to correctly handle exceptions if appropriate

2000-11-25  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* exult.cc/usecode.cc: added config/debug/trace/usecode (yes/no) option

2000-11-26  Dancer Vesperman <dancer@users.sourceforge.net>